syntax = "proto3";

package gameNotification;

// 위치 정보 메시지 구조
message LocationUpdate {
  repeated UserLocation users = 1;

  message UserLocation {
    string id = 1;
    float x = 2;
    float y = 3;
  }
}

// 새 유저 접속 알림
message NewUser {
  string userId = 1;
  int64 timestamp = 2;
}